# page-status

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
pkg/: config.toml
pkg/debian/: postinst
pkg/systemd/: page-status.service
src/: config.rs  main.rs  page.rs
