[package]
name = "page-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.20", features = ["derive"] }
reqwest = "0.11.12"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3.24"
